# source-publish

./: README.md  x
.github/workflows/: scorecard.yml
cairo/: ChangeLog  configure
cairo/cairo-1.14.8/: configure
cairo/src/: Makefile.in
cairo/test/: Makefile.in  cairo-test-constructors.c
certifi/certifi.egg-info/: PKG-INFO
gmp/: ChangeLog  Makefile.am  NEWS  acinclude.m4  config.guess  config.sub  configure.ac  gmp-h.in  gmp-impl.h  gmpxx.h  longlong.h  primesieve.c
gmp/doc/: gmp.texi
gmp/mini-gmp/: ChangeLog  mini-gmp.c  mini-mpq.c
gmp/mpz/: millerrabin.c  nextprime.c  oddfac_1.c  primorial_ui.c  stronglucas.c
gmp/rand/: randmts.c
gmp/tune/: common.c  speed.c  speed.h
lame/: ChangeLog.header  DEFINES  Makefile.MSVC  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  make_changelog.sh
lame/ACM/: ACM.cpp  AEncodeProperties.cpp  Makefile.in  acm.rc
lame/Dll/: BladeMP3EncDLL.c  Example.cpp  Makefile.in
lame/debian/: copyright
lame/doc/: Makefile.in
lame/dshow/: Encoder.cpp  Encoder.h  Makefile.in  Mpegac.cpp  Mpegac.h  Property.rc
lame/frontend/: Makefile.am  Makefile.in  console.c  console.h  get_audio.c  get_audio.h  gtkanal.c  lame_main.c  lametime.c  main.c  main.h  mp3rtp.c  parse.c  parse.h  rtp.c  timestatus.c  timestatus.h
lame/include/: Makefile.in  lame.def  libmp3lame.sym
lame/libmp3lame/: Makefile.am  VbrTag.c  (+17 more)
lame/mpglib/: Makefile.am  Makefile.in  README  mpglib.h
lame/vc_solution/: Makefile.am  Makefile.in  README.vs2019.txt  vs2019_lame.sln  vs2019_lame_config.props  vs2019_lame_lame.vcxproj  vs2019_libmp3lame.vcxproj  vs2019_libmp3lame_dll.vcxproj  vs2019_libmpg123_config.props  vs2019_libsndfile_config.props
libidn/: .gitignore  .gitlab-ci.yml  AUTHORS  FAQ  HACKING  Makefile.am  NEWS  README  THANKS  bootstrap.conf  cfg.mk  configure.ac
libidn/contrib/: README
libidn/contrib/doxygen/: gdoc2doxygen
libidn/contrib/java/: IDNA.c  Makefile.am  README
libidn/csharp/: AssemblyInfo.cs  IDNA.cs  IDNAException.cs  Makefile.am  NFKC.cs  Punycode.cs  PunycodeException.cs  Stringprep.cs  StringprepException.cs  libidn.cmbx  libidn.csproj  libidn.prjx  libidn.sln  libidn_PPC.csdproj  libidn_PPC.sln
libidn/csharp/generate/: AssemblyInfo.cs  GenerateNFKC.cs  GenerateRFC3454.cs  HashSet.cs  Program.cs  Tokenizer.cs
libidn/doc/: Makefile.am  gdoc  gdoc.mk  libidn.texi
libidn/doc/cyclo/: Makefile.am
libidn/doc/java/: Makefile.am
libidn/doc/specifications/: Description.txt  IDNConnect-testbed.tgz  IDNConnect.html  IDNstatement.txt  draft-alvestrand-idna-bidi-00.txt  draft-bakke-iscsi-stringprep-00.txt  draft-bakleh-reg-adm-acg-apu-00.txt  draft-bakleh-reg-adm-acg-apu-01.txt  draft-bartosiewicz-idn-pltld-08.txt  draft-costello-rfc3492bis-00.txt  draft-costello-rfc3492bis-01.txt  draft-costello-rfc3492bis-02.txt  draft-ekrema-smldn-00.txt  draft-faltstrom-idnabis-tables-00.txt  draft-faltstrom-idnabis-tables-01.txt  draft-faltstrom-unicode-synchronisation-00.txt  draft-farah-adntf-adns-guidelines-00.txt  draft-farah-adntf-adns-guidelines-01.txt  draft-hoffman-idn-reg-00.txt  draft-hoffman-idn-reg-01.txt  draft-hoffman-idn-reg-02.txt  draft-hoffman-pkix-stringmatch-00.txt  draft-hoffman-rfc3454bis-00.txt  draft-hoffman-rfc3454bis-01.txt  draft-hoffman-rfc3454bis-02.txt  draft-hoffman-rfc3490bis-00.txt  draft-hoffman-rfc3490bis-01.txt  draft-hoffman-rfc3490bis-02.txt  draft-hoffman-rfc3491bis-00.txt  draft-hoffman-rfc3491bis-01.txt  draft-hoffman-stringprep-00.txt  draft-hoffman-stringprep-01.txt  draft-hoffman-stringprep-02.txt  draft-hoffman-stringprep-04.txt  draft-hoffman-stringprep-05.txt  draft-hoffman-stringprep-06.txt  draft-hoffman-stringprep-07.txt  draft-iab-idn-nextsteps-00.txt  draft-iab-idn-nextsteps-01.txt  draft-iab-idn-nextsteps-03.txt  (+63 more)
libidn/doc/tld/: Makefile.am  README  fr.tld  no.tld
libidn/examples/: Makefile.am  README  example.c  example2.c  example3.c  example4.c  example5.c
libidn/fuzz/: Makefile.am  README.md  fuzzer.h  get_ossfuzz_corpora  libidn_stringprep_fuzzer.c  libidn_toascii_fuzzer.c  libidn_tounicode_fuzzer.c  main.c  run-afl.sh  run-clang.sh  view-coverage.sh
libidn/fuzz/libidn_tounicode_fuzzer.repro/: clusterfuzz-testcase-6105917865066496
libidn/java/: Makefile.am
libidn/java/src/: Makefile.am
libidn/java/src/main/java/: Makefile.am
libidn/java/src/main/java/gnu/: Makefile.am
libidn/java/src/main/java/gnu/inet/: Makefile.am
libidn/java/src/main/java/gnu/inet/encoding/: IDNA.java  IDNAException.java  Makefile.am  NFKC.java  Punycode.java  PunycodeException.java  RangeSet.java  Stringprep.java  StringprepException.java
libidn/java/src/test/: Makefile.am
libidn/java/src/test/java/: Makefile.am
libidn/java/src/test/java/gnu/inet/encoding/: RangeSetTest.java  StringprepTest.java
libidn/java/src/test/java/gnu/inet/encoding/caliper/: CaliperStringprep.java
libidn/java/src/util/java/: GenerateNFKC.java  GenerateRFC3454.java  Makefile.am  TestIDNA.java  TestNFKC.java
libidn/lib/: Makefile.am  gen-stringprep-tables.pl  gen-tld-tables.pl  gen-unicode-tables.pl  idn-free.c  idn-free.h  idna.c  idna.h  libidn.map  libidn.pc.in  nfkc.c  pr29.c  pr29.h  profiles.c  punycode.c  punycode.h  strerror-idna.c  strerror-pr29.c  strerror-punycode.c  strerror-stringprep.c  strerror-tld.c  stringprep.c  stringprep.h  tld.c  tld.h  toutf8.c  version.c
libidn/libc/: README  example.c  getaddrinfo-idn.txt
libidn/src/: Makefile.am  idn.c  idn.ggo
libidn/tests/: Makefile.am  tst_badutf8.c  tst_badutf8nfkc.c  tst_idna.c  tst_idna2.c  tst_idna3.c  tst_idna4.c  tst_nfkc.c  tst_pr29.c  tst_punycode.c  tst_strerror.c  tst_stringprep.c  tst_symbols.c  tst_tld.c  tst_toascii64oob.c  tst_toutf8.c  tst_utf8crash.c  utils.c  utils.h
libidn/windows/: libidn.sln  libidn.vcproj  libidn4win.mk
libidn/windows/include/: ac-stdint.h  config.h  idn-int.h  stdbool.h
libunistring/: .gitignore  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh
pycairo/: PKG-INFO  waf  wscript
tqdm/: setup.cfg
zeromq/: ChangeLog  Makefile.in  ZeroMQConfig.cmake.in  configure
(+279 files in other folders)
