## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	README.vs2019.txt \
	vs2019_arch_nasm.props \
	vs2019_arch_sse2.props \
	vs2019_arch_x87.props \
	vs2019_gtk_config.props \
	vs2019_lame_acm_adbg.vcxproj \
	vs2019_lame_acm_adbg.vcxproj.filters \
	vs2019_lame_acm_tinyxml.vcxproj \
	vs2019_lame_acm.vcxproj \
	vs2019_lame_acm.vcxproj.filters \
	vs2019_lame_clients.sln \
	vs2019_lame_config.props \
	vs2019_lame_dshow.vcxproj \
	vs2019_lame_dshow.vcxproj.filters \
	vs2019_lame_enc_dll.vcxproj \
	vs2019_lame_enc_dll.vcxproj.filters \
	vs2019_lame_lame.vcxproj \
	vs2019_lame_lame.vcxproj.filters \
	vs2019_lame_mp3rtp.vcxproj \
	vs2019_lame_mp3rtp.vcxproj.filters \
	vs2019_lame_mp3x.vcxproj \
	vs2019_lame_mp3x.vcxproj.filters \
	vs2019_lame_test.vcxproj \
	vs2019_lame.sln \
	vs2019_libmp3lame_dll.vcxproj \
	vs2019_libmp3lame.vcxproj \
	vs2019_libmp3lame.vcxproj.filters \
	vs2019_libmpg123_config.props \
	vs2019_libsndfile_config.props \
	vs2019_nasm.props \
	vs2019_nasm.targets \
	vs2019_nasm.xml \
	vs2019_win71sdk_config.props
